# MT3v2

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/eval/: default.yaml
configs/models/: mt3v2.yaml
configs/tasks/: task1.yaml  task2.yaml  task3.yaml  task4.yaml
src/: training.py
src/data_generation/: data_generator.py  mot_data_generation.py
src/modules/: contrastive_classifier.py  evaluator.py  loss.py  mlp.py  transformer.py
src/modules/models/mt3v2/: mt3v2.py  transformer.py
src/modules/realistic_radar_model/: realistic_meas_model.py  training_val_data.mat
src/results/precomputed_covs/: precomputed_covs.mat
src/util/: load_config_files.py  logger.py  misc.py  plot_results.py  plotting.py  pmb_utils.py  ppp_tuner_for_mt3.py
tests/: test_mot_datagen.py
